lots of cleanups to text

--- a/src/webapp/pages/currentObjectives.html
+++ b/src/webapp/pages/currentObjectives.html
@@ -1,3 +1,5 @@
+<h2>Parents,</h2>
+
 <p>Here's a simple demonstration of access to multiple types
 of materials when teachers maintain a calendar of learning objectives
 (i.e., indicate what objectives they are currently covering).</p>
@@ -5,6 +7,10 @@ of materials when teachers maintain a calendar of learning objectives
 <p>For the demonstration, enter <strong>trawick@gmail.com</strong>
 as the teacher e-mail address, then press Lookup, then select one
 of the classes which appears.</p>
+
+<p>(In the real version you won't have to reenter any information;
+opening a web page or an app on your smartphone will retrieve current
+class activity for your children automatically.)</p>
 
   <div data-ng-controller="GetTeacherEmailCtrl" class="emailInput">
     Teacher e-mail address: <input type="text" data-ng-model="teacherEmail" />
