--- a/src/webapp/pages/forAuthors.html
+++ b/src/webapp/pages/forAuthors.html
@@ -1,20 +1,20 @@
-<p>Curriculum designers:</p>
+<h2>Curriculum designers,</h2>
 
 <ul>
-  <li>The formal curriculum description moves closer to the forefront
+  <li>The curriculum definitions you normally work with will be tagged
+  to identify the individual types of information, after which they
+  can be imported into the system.</li>
+  <li>The formal curriculum description will move closer to the forefront
   of the conversation around individual classes and educational materials
   because the individual
   learning objectives in the formal curriculum description are the key
   to communication of activities between teachers and parents.</li>
   <li>The formal description, "I Can" statements, and informal
-  descriptions of individual objectives will be viewed by all
-  <em>involved</em> parties via the central use of the objectives.</li>
-  <li>From the curriculum designers we need an outline of each course
-  with different types of information around each objective.</li>
+  descriptions of individual objectives will be easily accessed by teachers,
+  parents, and students by all via the central focus on objectives.</li>
 </ul>
 
-
-<p>Creators of educational materials:</p>
+<h2>Creators of educational materials, </h2>
 
 <ul>
   <li>Educators who contribute material to the repository will be
@@ -22,6 +22,6 @@
   <li>The material must be freely available under common terms, 
   similar to material in Wikipedia.</li>
   <li>Not all materials are of a form suitable for inclusion in the
-  repository, but the index to outside resources can be used to relate
+  repository, but an index to outside resources can be used to relate
   the materials to specific objectives.</li>
 </ul>
