--- a/src/webapp/pages/forNerds.html
+++ b/src/webapp/pages/forNerds.html
@@ -1,4 +1,6 @@
-<p>Nerds, there's a lot of work for us to do.  Conceptually there are two
+<h2>Nerds,</h2>
+
+<p>We have a lot of work to do.  Conceptually there are two
 separate projects:</p>
 
 <ol>
@@ -11,7 +13,8 @@ separate projects:</p>
   a teacher database for maintaining current objectives by class</li>
 </ol>
 
-<p>Some older information is available at <a href="https://github.com/trawick/edurepo/tree/master/docs">a docs directory on Github</a>.</p>
+<p>Some older information is available in
+<a href="https://github.com/trawick/edurepo/tree/master/docs">a docs directory on Github</a>.</p>
 
 <h3>Repository of materials</h3>
 
@@ -19,7 +22,7 @@ separate projects:</p>
 of the data, though not necessarily using end user software.
 It must be easy for a user or institution to maintain an up to date copy.
 It must track all changes to the data through history.  Storage
-as directories and files in a general purpose DVCS is the expected
+as directories and plain text files in a general purpose DVCS is the expected
 solution.</p>
 
 <p>All contributors must be assured that, in the event the machine-
@@ -31,7 +34,8 @@ available and usable by other projects.</p>
 <h3>Access to the repository over the web</h3>
 
 <p>The repository of materials is imported into a database for quick
-access.  REST APIs are provided for end user software to use.</p>
+access.  REST APIs will be provided for end user software to interact
+with the system.</p>
 
 <p>Additional applications and databases support ease of use of the
 educational materials, including:</p>
