--- a/src/webapp/pages/forVendors.html
+++ b/src/webapp/pages/forVendors.html
@@ -1,21 +1,22 @@
-<p>Educational software vendors:</p>
+<h2>Educational software vendors,</h2>
 
 <ul>
   <li>The repository is the means to share data and make it machine
-  readable, enhancing most educational software by virtue of its 
+  readable, potentially enhancing your software by virtue of its 
   access to more materials and, just as importantly, to access those
   materials most pertinent to the student's current needs.</li>
   <li>Specialty software which currently requires teachers to rekey
   or otherwise manipulate the educational materials can be much
   easier for users when they can reuse material from the repository.</li>
-  <li>Ready access to data should incentivize experiments in new methods
+  <li>Easy access to materials will incentivize experiments in new methods
   or situations for learning.</li>
+  <li>Software is the key to making school activities school pervasive in
+  family interaction.</li>
 </ul>
 
-<p>Textbook publishers and other vendors of educational materials:</p>
+<h2>Textbook publishers and other vendors of educational materials,</h2>
 
 <ul>
-  <li>There's plenty of room for commercial involvement, centrally or at the margins.</li>
   <li>The software to make educational materials available to client
   software is open source and can be used for any purpose.  For example,
   an educational material vendor such as a textbook publisher with on-line
@@ -24,4 +25,6 @@
   and parents covered by a license or other agreement to access the proprietary
   materials using software of their choice, not just software provided by the
   vendor.</li>
+  <li>Making your materials available with the same access mechanisms as
+  the free materials will allow them to be used with more end user software.</li>
 </ul>
