--- a/src/webapp/pages/qanda.html
+++ b/src/webapp/pages/qanda.html
@@ -6,8 +6,11 @@
 Raleigh, North Carolina.  I believe that this application of
 relatively common technology and the infusion of open software, open
 information culture can greatly improve the effectiveness of 
-some existing efforts by many educators to develop and share
-course-related information.</p>
+existing efforts to develop and share course materials and communicate
+current lessons to parents, especially at the middle school and
+high school levels, when parents find it increasingly difficult to
+understand how they can contribute to their children's understanding
+of current activities.</p>
 
 <h3>Can I use this?</h3>
 
@@ -47,60 +50,65 @@ that is useful to you.  Here's the current plan:</p>
 <h5>April 2014</h5>
 
 <ul>
-  <li>at least one commonly used K-12 course represented well enough
-in the system to be able to experiment with the entire system</li>
+  <li>At least one commonly used K-12 course will be represented well enough
+to be able to validate many aspects of the system.</li>
+  <li>A blog will be used to communicate improvements to interested parties.</li>
 </ul>
 
 <h5>May 2014</h5>
 
 <ul>
-  <li>dedicated servers for edjective.org</li>
-  <li>create one or more mailing lists to discuss different aspects of the
-system</li>
+  <li>edjective.org will have dedicated servers.</li>
+  <li>Mailing lists will be available to discuss different aspects of the
+system.</li>
 </ul>
 
 <h5>June 2014</h5>
 
 <ul>
-  <li>end user software has enough working features for a handful of
-early adopters to
-commit to using the system in the upcoming school year</li>
+  <li>End user software will have sufficient features to make the system worthwhile
+for use in the upcoming school year, even though software from third parties
+will not yet be available.</li>
+  <li>Server deployment instructions for institutions wishing to run their own
+servers will be ready for early adopters.</li>
 </ul>
 
 <h5>July 2014</h5>
 
 <ul>
-  <li>API documentation for other software authors/vendors to use</li>
-  <li>effort to convince authors of existing software, especially
-freely available software that many teachers use, to support retrieval
-of information from the system</li>
+  <li>API documentation will be available for other software authors/vendors so 
+that their software can interact with the system.</li>
+  <li>Make an effort to convince authors of existing software, especially
+freely available software that many teachers use, to interact with 
+the system.</li>
 </ul>
 
 <h5>August 2014</h5>
 
 <ul>
-  <li>at least four commonly used K-12 courses properly defined in the system</li>
-  <li>additional course definitions and related offerings, subject to ability
-of course sponsor to handle most of the work</li>
-  <li>operational capacity to support at least 50 individual course offerings
-(i.e., about 1500 students), with plans for scaling out to support more</li>
+  <li>At least four commonly used K-12 courses will be defined in the system,
+with an initial set of materials and external resources defined.</li>
+  <li>Additional course definitions and related materials may be available
+subject to the ability of the course sponsor to handle most of the work.</li>
+  <li>The edjective.org servers will have the operational capacity to support
+at least 50 individual course offerings (i.e., about 1500 students), with plans
+for scaling out to support more students if funds are available.</li>
 </ul>
 
-<h3>What is your Service Level Agreement?  How do I know the servers will handle
-the load?</h3>
+<h3>How do I know the servers will handle the load if I commit to using this?</h3>
 
 <p>It is no secret that web based software does not always support the number
-of people that want to use it.  Unfortunately, this is not an operation
-that can afford to make available limitless engineering or server resources to
+of people that want to use it.  Unfortunately, edjective.org does not currently
+have available the limitless engineering and server resources to
 handle any possible demand.  We will have to grow with demand and with the ability
 to pay for resources.</p>
 
-<p>A school system can mitigate this by setting up dedicated servers for
-the use of their students, largely avoiding the unpredictable impact
+<p>A school system can mitigate any risk of server availability by setting up 
+dedicated servers for the use of their students, largely avoiding the unpredictable
+impact
 of the use of public systems by unknown numbers of students across the world.
 The school system can control the use of its servers by limiting the number
-of classes using it to match the server resources they are able to allocate to
-it.</p>
+of classes using it to match the server resources they are able to allocate.</p>
 
 <p>Over time the public server will evolve to predictably, reliably support a
 very large number of users, just like other resources we use daily on the
@@ -108,8 +116,8 @@ internet.</p>
 
 <h3>What happens if Jeff quits working on this?</h3>
 
-<p>The software and educational materials are and will be freely licensed.
-The educational materials will be stored in machine readable format suitable
+<p>The software and educational materials are freely licensed.
+The educational materials are maintained in machine readable format suitable
 for use even without using the software developed for this project.</p>
 
 <p>In order to ensure that this project can survive independent of any particular
@@ -118,18 +126,18 @@ individuals, I will promote the following:</p>
 <ul>
    <li>The software components should be maintained as a largely independent
 project which is part of an existing non-profit organization with the cultural, technical,
-legal, and financial ability to support ongoing development and maintenance by
-interested parties.  (<em>something like the Apache Software Foundation</em>)</li>
+legal, and financial ability to oversee ongoing development and maintenance by
+interested parties (<em>something like the Apache Software Foundation</em>).</li>
    <li>The educational materials themselves should be maintained separately by
 a new or existing non-profit organization that can provide the appropriate culture
-and other resources suitable for the type of material and the community which authors
-it, which is very different than an open source software community.  This same
-organization should operate the definitive servers which make the materials freely
-accessible to as many people as possible.
-  (<em>something like the Wikimedia Foundation</em>)</li>
+and other resources suitable for educational materials and the community which
+maintain them; this may be very different than an open source software community.
+This same organization should operate the definitive servers which make the materials 
+freely accessible to as many people as possible (<em>something like the Wikimedia 
+Foundation</em>).</li>
    <li>Even though it is crucial to provide the core services without cost to
 anyone, the ability of individuals and vendors to profit from
-involvement in the ecosystem should be maintained; this provides a powerful
+involvement in the ecosystem must be maintained; this provides a powerful
 incentive to contribute
 directly to the projects as well as to provide new types of end user software that can
 provide a better experience for teachers, parents, and students.</li>
@@ -137,14 +145,14 @@ provide a better experience for teachers, parents, and students.</li>
 
 <h3>Money and resources</h3>
 
-<h4>Who is paying for this work?</h4>
+<h4>Who is developing this?</h4>
 
 <p>Over the coming months, a small number of educators who hope to use the
 system will work on educational materials, either as volunteers or as part 
 of their jobs or course work.</p>
 
-<p>Software development is currently unfunded, and likely to be impacted
-by other limits on my time.  I am working on this on a 100% volunteer basis.</p>
+<p>I am the sole software developer at present, and my time will likely be impacted
+by the need to perform unrelated work for hire.</p>
 
 <h4>How can I help?</h4>
 
@@ -153,9 +161,10 @@ by other limits on my time.  I am working on this on a 100% volunteer basis.</p>
 and provide materials for the system.</li>
   <li>Sponsor me or other developers who are building the software.</li>
   <li>Volunteers, refer to the rough schedule above for when different parts
-of the system will be available.</li>
+of the system will be available, and contact me if there is some way that
+you would like to help.</li>
 </ul>
 
 <h3>How can I contact you?</h3>
 
-<code>trawick@gmail.com</code>
+<p><a href="http://emptyhammock.com/contact/">Contact information</a></p>
