--- a/src/webapp/pages/forTeachers.html
+++ b/src/webapp/pages/forTeachers.html
@@ -1,4 +1,4 @@
-<h2>Teachers...</h2>
+<h2>Teachers,</h2>
 
 <p>In order for you and your student families to make best use of
 the system, we need you to maintain a calendar showing the current
@@ -7,12 +7,11 @@ project.  Easy to use software will make this quick, and in a short
 time you can lay out projected progress over the coming days or
 weeks and easily adjust it later.</p>
 
-<p>You and your student families will be able to use different 
+<p>You and your student families will then be able to use different 
 software to access materials relevant to the current learning
 objectives.</p>
-
-<p>You are also <a href="#/forAuthors">authors of materials</a>.</p>
 
 <p>If you are teaching a course which is not yet defined in the
 system, you and your colleagues can collaborate on defining it.</p>
 
+<p>You are also <a href="#/forAuthors">authors of materials</a>.</p>
