--- a/src/webapp/pages/keyIdeas.html
+++ b/src/webapp/pages/keyIdeas.html
@@ -12,15 +12,16 @@ context of a specific <em>learning objective</em>.</li>
 <h2>Existing problems to be addressed</h2>
 
 <ol>
-  <li>a huge amount duplicate effort on the part of teachers preparing materials or adjusting them
-(even <em>cutting and pasting</em>) to consume in software</li>
+  <li>a large amount of duplicate effort on the part of teachers preparing or adjusting materials
+(even <em>cutting and pasting</em>) to consume in software ranging from Microsoft Word to
+Quizlet</li>
   <li>difficulties for parents to understand current objectives, often making it impractical
-for parents to follow the progress of classes on a regular basis</li>
+for parents to follow the progress of classes and discuss class topics in a meaningful way</li>
   <li>ineffective systems created by states and private groups to index available materials,
 which do not allow direct access to materials which are relevant to current study</li>
 </ol>
 
-<h2>Key ideas of the project</h2>
+<h2>Key features of the project</h2>
 
 <ol>
   <li>The current learning objectives for a class are easily communicated by the teacher
@@ -35,7 +36,7 @@ specific learning objectives.</li>
 by end user software.</li>
 </ol>
 
-<h2>Key objectives of the project</h2>
+<h2>Expected outcome of the project</h2>
 
 <ol>
   <li>Relating all materials to specific learning objectives will allow teachers, students,
@@ -58,5 +59,5 @@ or the conjugation of common French verbs at school today, it should not
 take more than a few taps on her parent's smartphone or computer to access
 relevant materials and start a conversation about it.</li>
   <li>Teachers who donate materials to the system will enable those materials
-to be consumed in unimaginable ways by students all over the world.</li>
+to be consumed in many different ways by students all over the world.</li>
 </ul>
