--- a/src/webapp/pages/forNerds.html
+++ b/src/webapp/pages/forNerds.html
@@ -25,9 +25,10 @@ It must track all changes to the data through history.  Storage
 as directories and plain text files in a general purpose DVCS is the expected
 solution.</p>
 
-<p>All contributors must be assured that, in the event the machine-
-readable project is cancelled, the educational materials will still be
-available and usable by other projects.</p>
+<p>All contributors must be assured that, in the event this project
+is cancelled, the educational materials will still be available and
+usable by other projects, in a form that supports machine readable
+access.</p>
 
 <p>All users must be able to use the materials under simple terms.</p>
 
