--- a/src/webapp/pages/forVendors.html
+++ b/src/webapp/pages/forVendors.html
@@ -1,5 +1,8 @@
 <h2>Educational software vendors,</h2>
 
+<p>Your software is the key to making current school activities school
+pervasive in family interactions.</p>
+
 <ul>
   <li>The repository is the means to share data and make it machine
   readable, potentially enhancing your software by virtue of its 
@@ -10,8 +13,6 @@
   easier for users when they can reuse material from the repository.</li>
   <li>Easy access to materials will incentivize experiments in new methods
   or situations for learning.</li>
-  <li>Software is the key to making school activities school pervasive in
-  family interaction.</li>
 </ul>
 
 <h2>Textbook publishers and other vendors of educational materials,</h2>
