--- a/src/webapp/pages/qanda.html
+++ b/src/webapp/pages/qanda.html
@@ -4,13 +4,13 @@
 
 <p>My name is Jeff Trawick and I am a software developer located in
 Raleigh, North Carolina.  I believe that this application of
-relatively common technology and the infusion of open software, open
+relatively common technology and the infusion of an open software, open
 information culture can greatly improve the effectiveness of 
 existing efforts to develop and share course materials and communicate
 current lessons to parents, especially at the middle school and
-high school levels, when parents find it increasingly difficult to
-understand how they can contribute to their children's understanding
-of current activities.</p>
+high school levels when parents find it increasingly difficult to
+understand exactly what their kids are studying day to day, much less contribute
+to their children's understanding.</p>
 
 <h3>Can I use this?</h3>
 
@@ -23,7 +23,7 @@ resources applicable to your learning objectives, and so forth.</p>
 
 <p>Unfortunately, you're correct; it isn't feasible for most people to do that.  You need 
 someone else to maintain the computer resources that make it work, with
-minimal effort on your part.</p>
+minimal effort on your part, and a central place to collaborate on the materials.</p>
 
 <p>As long as your course is generally useful and you or someone else is
 willing to publish formal course descriptions and possibly additional materials
@@ -51,16 +51,15 @@ that is useful to you.  Here's the current plan:</p>
 
 <ul>
   <li>At least one commonly used K-12 course will be represented well enough
-to be able to validate many aspects of the system.</li>
-  <li>A blog will be used to communicate improvements to interested parties.</li>
+to be able to validate most aspects of the system.</li>
+  <li>A blog will be created to communicate improvements to interested parties.</li>
 </ul>
 
 <h5>May 2014</h5>
 
 <ul>
   <li>edjective.org will have dedicated servers.</li>
-  <li>Mailing lists will be available to discuss different aspects of the
-system.</li>
+  <li>Mailing lists will be available to discuss the project.</li>
 </ul>
 
 <h5>June 2014</h5>
@@ -70,17 +69,17 @@ system.</li>
 for use in the upcoming school year, even though software from third parties
 will not yet be available.</li>
   <li>Server deployment instructions for institutions wishing to run their own
-servers will be ready for early adopters.</li>
+servers will be ready.</li>
 </ul>
 
 <h5>July 2014</h5>
 
 <ul>
-  <li>API documentation will be available for other software authors/vendors so 
-that their software can interact with the system.</li>
-  <li>Make an effort to convince authors of existing software, especially
-freely available software that many teachers use, to interact with 
-the system.</li>
+  <li>API documentation will be available for other software authors/vendors who
+want their software to be able to interact with the system.</li>
+  <li>An effort will be made to contact authors of existing software, especially
+freely available software that many teachers use, to educate them about the
+possibility of interoperating with the system.</li>
 </ul>
 
 <h5>August 2014</h5>
@@ -92,21 +91,20 @@ with an initial set of materials and external resources defined.</li>
 subject to the ability of the course sponsor to handle most of the work.</li>
   <li>The edjective.org servers will have the operational capacity to support
 at least 50 individual course offerings (i.e., about 1500 students), with plans
-for scaling out to support more students if funds are available.</li>
+for scaling out to support more students if the demand exists and funds are
+available.</li>
 </ul>
 
 <h3>How do I know the servers will handle the load if I commit to using this?</h3>
 
 <p>It is no secret that web based software does not always support the number
 of people that want to use it.  Unfortunately, edjective.org does not currently
-have available the limitless engineering and server resources to
-handle any possible demand.  We will have to grow with demand and with the ability
-to pay for resources.</p>
+have the engineering and server resources to handle any possible demand.  We
+will have to grow with demand and with the ability to pay for resources.</p>
 
 <p>A school system can mitigate any risk of server availability by setting up 
 dedicated servers for the use of their students, largely avoiding the unpredictable
-impact
-of the use of public systems by unknown numbers of students across the world.
+impact of the use of public systems by unknown numbers of students.
 The school system can control the use of its servers by limiting the number
 of classes using it to match the server resources they are able to allocate.</p>
 
@@ -138,9 +136,10 @@ Foundation</em>).</li>
    <li>Even though it is crucial to provide the core services without cost to
 anyone, the ability of individuals and vendors to profit from
 involvement in the ecosystem must be maintained; this provides a powerful
-incentive to contribute
-directly to the projects as well as to provide new types of end user software that can
-provide a better experience for teachers, parents, and students.</li>
+incentive for commercial interests to participate directly in the open source,
+open data aspects of the project as well as to provide new types of end user 
+software that can provide a better experience for teachers, parents, and
+students.</li>
 </ul>
 
 <h3>Money and resources</h3>
@@ -151,8 +150,8 @@ provide a better experience for teachers, parents, and students.</li>
 system will work on educational materials, either as volunteers or as part 
 of their jobs or course work.</p>
 
-<p>I am the sole software developer at present, and my time will likely be impacted
-by the need to perform unrelated work for hire.</p>
+<p>I am the sole software developer at present; unfortunately, my time will 
+be impacted by the need to perform unrelated work for hire.</p>
 
 <h4>How can I help?</h4>
 
