--- a/src/webapp/pages/keyIdeas.html
+++ b/src/webapp/pages/keyIdeas.html
@@ -45,7 +45,7 @@ become much more easy to track exactly what their children are currently working
 quickly find information to help them with their homework.</em></li>
   <li>Teachers will have a much easier means to communicate general class activity to parents.</li>
   <li>The open access of the system will support a rich ecosystem with incentives to educators
-of collaborate on materials and incentives to software developers to offer creative ways
+to collaborate on materials and incentives to software developers to offer creative ways
 to use them.</li>
 </ol>
 
