--- a/src/webapp/pages/keyIdeas.html
+++ b/src/webapp/pages/keyIdeas.html
@@ -32,8 +32,8 @@ is the course curriculum itself.</em>  Teachers will be able to use the reposito
 collaborate on and reuse materials without the burden of self publishing.</li>
   <li>Users of the system will be able to promote outside resources which apply to
 specific learning objectives.</li>
-  <li>All materials in the system are freely available by end users and, more importantly,
-by end user software.</li>
+  <li>All materials in the system are freely available by end users and, importantly,
+easily consumable by end user software.</li>
 </ol>
 
 <h2>Expected outcome of the project</h2>
