--- a/src/webapp/pages/qanda.html
+++ b/src/webapp/pages/qanda.html
@@ -129,7 +129,7 @@ interested parties (<em>something like the Apache Software Foundation</em>).</li
    <li>The educational materials themselves should be maintained separately by
 a new or existing non-profit organization that can provide the appropriate culture
 and other resources suitable for educational materials and the community which
-maintain them; this may be very different than an open source software community.
+maintains them; this is expected to be very different than an open source software community.
 This same organization should operate the definitive servers which make the materials 
 freely accessible to as many people as possible (<em>something like the Wikimedia 
 Foundation</em>).</li>
