--- a/src/webapp/pages/keyIdeas.html
+++ b/src/webapp/pages/keyIdeas.html
@@ -12,13 +12,14 @@ context of a specific <em>learning objective</em>.</li>
 <h2>Existing problems to be addressed</h2>
 
 <ol>
-  <li>a large amount of duplicate effort on the part of teachers preparing or adjusting materials
+  <li>There is a large amount of duplicate effort on the part of teachers preparing or adjusting materials
 (even <em>cutting and pasting</em>) to consume in software ranging from Microsoft Word to
-Quizlet</li>
-  <li>difficulties for parents to understand current objectives, often making it impractical
-for parents to follow the progress of classes and discuss class topics in a meaningful way</li>
-  <li>ineffective systems created by states and private groups to index available materials,
-which do not allow direct access to materials which are relevant to current study</li>
+Quizlet.</li>
+  <li>Parents often have difficulties understanding the current objectives, making it impractical
+for parents to follow the progress of classes and discuss class topics in a meaningful way.</li>
+  <li>States and private groups are creating ineffective indexes of available materials
+which do not allow direct access to materials which are relevant to current the current
+objectives.</li>
 </ol>
 
 <h2>Key features of the project</h2>
