--- a/src/webapp/pages/keyIdeas.html
+++ b/src/webapp/pages/keyIdeas.html
@@ -18,7 +18,7 @@ Quizlet.</li>
   <li>Parents often have difficulties understanding the current objectives, making it impractical
 for parents to follow the progress of classes and discuss class topics in a meaningful way.</li>
   <li>States and private groups are creating ineffective indexes of available materials
-which do not allow direct access to materials which are relevant to current the current
+which do not allow direct access to materials which are relevant to the current
 objectives.</li>
 </ol>
 
@@ -33,7 +33,7 @@ is the course curriculum itself.</em>  Teachers will be able to use the reposito
 collaborate on and reuse materials without the burden of self publishing.</li>
   <li>Users of the system will be able to promote outside resources which apply to
 specific learning objectives.</li>
-  <li>All materials in the system are freely available by end users and, importantly,
+  <li>All materials in the system are freely available by end users and
 easily consumable by end user software.</li>
 </ol>
 
