--- a/src/webapp/pages/forTeachers.html
+++ b/src/webapp/pages/forTeachers.html
@@ -11,6 +11,8 @@ weeks and easily adjust it later.</p>
 software to access materials relevant to the current learning
 objectives.</p>
 
+<p>See the demo on the <a href="#/forParents">parents</a> page.</p>
+
 <p>If you are teaching a course which is not yet defined in the
 system, you and your colleagues can collaborate on defining it.</p>
 
