--- a/src/webapp/pages/currentObjectives.html
+++ b/src/webapp/pages/currentObjectives.html
@@ -44,6 +44,9 @@ class activity for your children automatically.)</p>
               </li>
             </ul>
 
+            <p ng-show="obj.referencetext">Reference text:</p>
+            <p>{{obj.referencetext.text}}</p>
+
             <p ng-show="obj.resources.length">External resources:</p>
             <ul>
               <li data-ng-repeat="res in obj.resources">
