make excuses for the poor user interface

--- a/src/webapp/pages/currentObjectives.html
+++ b/src/webapp/pages/currentObjectives.html
@@ -91,4 +91,10 @@ class activity for your children automatically.)</p>
       </li>
     </ul>
     </div>
+
+    <div class="ui-warning">
+        <p>Important: This is just a demo of basic capabilities.  It is
+        not intended to show the user interface for the planned end-user
+        software.</p>
+    </div>
   </div>
