--- a/src/webapp/pages/forAuthors.html
+++ b/src/webapp/pages/forAuthors.html
@@ -92,4 +92,9 @@ id, then press Lookup.</p>
     </li>
   </ul>
 
+    <div class="ui-warning">
+        <p>Important: This is just a demo of basic capabilities.  It is
+        not intended to show the user interface for the planned end-user
+        software.</p>
+    </div>
 </div>
