fix mispelled data-ng-model that broke lookup of arbitrary course ids

--- a/src/webapp/pages/forAuthors.html
+++ b/src/webapp/pages/forAuthors.html
@@ -36,7 +36,7 @@ id, then press Lookup.</p>
 
 <div data-ng-controller="CourseLookupCtrl">
 
-  Course id: <input type="text" data-mg-model="courseId" />
+  Course id: <input type="text" data-ng-model="courseId" />
   <button data-ng-click="update(courseId)">Lookup course</button>
 
   <p ng-show="objectives.length">Course objectives:</p>
