--- a/src/webapp/pages/forAuthors.html
+++ b/src/webapp/pages/forAuthors.html
@@ -39,7 +39,9 @@ id, then press Lookup.</p>
   Course id: <input type="text" data-ng-model="courseId" />
   <button data-ng-click="update(courseId)">Lookup course</button>
 
-  <p ng-show="objectives.length">Course objectives:</p>
+  <p data-ng-show="course.description">{{course.description}}</p>
+
+  <p data-ng-show="objectives.length">Course objectives:</p>
   <ul>
     <li data-ng-repeat="obj in objectives">
       {{obj.id}} {{obj.formal_description}}
