LO: axe simple_description, rename formal_description to just description

--- a/src/webapp/pages/forAuthors.html
+++ b/src/webapp/pages/forAuthors.html
@@ -46,7 +46,7 @@ id, then press Lookup.</p>
   <p data-ng-show="objectives.length">Course objectives:</p>
   <ul>
     <li data-ng-repeat="obj in objectives">
-      {{obj.id}} {{obj.formal_description}}
+      {{obj.id}} {{obj.description}}
 
       <p data-ng-show="obj.icans.length">I Can statements:</p>
       <ul>
