link course browser to front page, improve usability when a useful category isn't selected

--- a/src/webapp/pages/browse.html
+++ b/src/webapp/pages/browse.html
@@ -9,6 +9,7 @@
         </select>
     </form>
 
+    <p data-ng-hide="courses"><em>This course category does not contain any courses.</em></p>
     <span data-ng-show="courses">
     <p>Select course:</p>
 
