--- a/src/webapp/pages/front.html
+++ b/src/webapp/pages/front.html
@@ -1,9 +1,10 @@
 <ul class="huge">
-        <li class="keyideas"><a href="#/keyIdeas">Key ideas</a></li>
+    <li class="browse"><a href="#/browse">Browse</a></li>
+    <li class="keyideas"><a href="#/keyIdeas">Key ideas</a></li>
 	<li class="forteachers"><a href="#/forTeachers">For teachers</a></li>
 	<li class="forparents"><a href="#/forParents">For parents</a></li>
 	<li class="forauthors"><a href="#/forAuthors">For authors</a></li>
 	<li class="forvendors"><a href="#/forVendors">For vendors</a></li>
-        <li class="qanda"><a href="#/QandA">Q &amp; A</a></li>
+    <li class="qanda"><a href="#/QandA">Q &amp; A</a></li>
 	<li class="fornerds"><a href="#/forNerds">For nerds</a></li>
 </ul>
